[tool.poetry]
name = "weather-agent"
version = "0.0.1"
description = "Weather query through openai and Serp API"
authors = []
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.32.0"
google-search-results = "2.4.2"
langchain = "^0.1.0"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[tool.langserve]
export_module = "weather_agent"
export_attr = "agent_executor"

[tool.templates-hub]
use-case = "question-answering"
author = "Smartvision"
integrations = ["OpenAI", "serpapi"]
tags = ["query", "agents"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"